--- a/.gitignore
+++ b/.gitignore
@@ -375,6 +375,7 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+FodyWeavers.xml
 
 # VS Code files for those working on multiple tools
 .vscode/*
