--- a/TOHE.csproj
+++ b/TOHE.csproj
@@ -7,7 +7,7 @@
     <Description>Town Of Host Edited</Description>
     <Authors>KARPED1EM</Authors>
     <langVersion>latest</langVersion>
-	<AmongUs>C:\Users\popul\Documents\Among Us v2023.7.12</AmongUs>
+	<AmongUs>E:\Program Files\AmongUs</AmongUs>
 	<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
