Prevent door closes for roles that can't sabotage

--- a/TOHE.csproj
+++ b/TOHE.csproj
@@ -7,7 +7,7 @@
     <Description>Town Of Host Edited</Description>
     <Authors>KARPED1EM</Authors>
     <langVersion>latest</langVersion>
-	<AmongUs>D:\Epic Games\AmongUs</AmongUs>
+	<AmongUs>E:\Program Files\AmongUs</AmongUs>
 	<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
