--- a/TOHE.csproj
+++ b/TOHE.csproj
@@ -15,6 +15,10 @@
     <EmbeddedResource Include=".\Resources\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="Roles\Crewmate\Oracle.cs~RF15f21203.TMP" />
+  </ItemGroup>
+
 	<ItemGroup>
 		<PackageReference Include="AmongUs.GameLibs.Steam" Version="2023.7.11" PrivateAssets="all" />
 		<PackageReference Include="BepInEx.IL2CPP.MSBuild" Version="2.0.1" />
