--- a/TOHE.csproj
+++ b/TOHE.csproj
@@ -3,20 +3,17 @@
     <TargetFramework>net6.0</TargetFramework>
     <GenerateAssemblyFileVersionAttribute>false</GenerateAssemblyFileVersionAttribute>
     <GenerateAssemblyInformationalVersionAttribute>false</GenerateAssemblyInformationalVersionAttribute>
-	<GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
-    <Description>Town Of Host Edited</Description>
-    <Authors>KARPED1EM</Authors>
+	  <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
+    <Description>TOHE+</Description>
+    <Authors>Gurge44</Authors>
     <langVersion>latest</langVersion>
-	<AmongUs>E:\Program Files\AmongUs</AmongUs>
-	<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+	  <AmongUs>E:\Program Files\AmongUs</AmongUs>
+	  <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+	  <Optimize>True</Optimize>
   </PropertyGroup>
-
+	
   <ItemGroup>
     <EmbeddedResource Include=".\Resources\**" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Remove="Roles\Crewmate\Oracle.cs~RF15f21203.TMP" />
   </ItemGroup>
 
 	<ItemGroup>
@@ -27,7 +24,7 @@
 	</ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Costura.Fody" Version="5.7.0">
+    <PackageReference Include="Costura.Fody" Version="5.8.0-alpha0098">
       <IncludeAssets>runtime; compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
