--- a/TOHE.csproj
+++ b/TOHE.csproj
@@ -15,6 +15,14 @@
   <ItemGroup>
     <EmbeddedResource Include=".\Resources\**" />
   </ItemGroup>
+	
+  <ItemGroup>
+    <None Remove="resources\modnews\english\TOHE+.v1.2.0.txt" />
+  </ItemGroup>
+	
+  <ItemGroup>
+    <EmbeddedResource Include="resources\modnews\english\TOHE+.v1.2.0.txt" />
+  </ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="AmongUs.GameLibs.Steam" Version="2023.10.24" PrivateAssets="all" />
