Add announcement message

--- a/TOHE.csproj
+++ b/TOHE.csproj
@@ -18,12 +18,14 @@
 	
   <ItemGroup>
     <None Remove="resources\modnews\english\TOHE+.v1.2.0.txt" />
+    <None Remove="resources\modnews\english\TOHE+.v1.3.0.txt" />
     <None Remove="Roles\Crewmate\Doormaster.cs~RF5dd42bf0.TMP" />
     <None Remove="Roles\Neutral\scqzwl4z.0wp~" />
   </ItemGroup>
 	
   <ItemGroup>
     <EmbeddedResource Include="resources\modnews\english\TOHE+.v1.2.0.txt" />
+    <EmbeddedResource Include="resources\modnews\english\TOHE+.v1.3.0.txt" />
   </ItemGroup>
 
 	<ItemGroup>
