--- a/TOHE.csproj
+++ b/TOHE.csproj
@@ -20,6 +20,7 @@
   <ItemGroup>
     <None Remove="resources\modnews\english\TOHE+.v1.2.0.txt" />
     <None Remove="resources\modnews\english\TOHE+.v1.3.0.txt" />
+    <None Remove="resources\modnews\english\TOHE+.v1.4.0.txt" />
     <None Remove="Roles\Crewmate\Doormaster.cs~RF5dd42bf0.TMP" />
     <None Remove="Roles\Neutral\scqzwl4z.0wp~" />
   </ItemGroup>
@@ -27,6 +28,7 @@
   <ItemGroup>
     <EmbeddedResource Include="resources\modnews\english\TOHE+.v1.2.0.txt" />
     <EmbeddedResource Include="resources\modnews\english\TOHE+.v1.3.0.txt" />
+    <EmbeddedResource Include="resources\modnews\english\TOHE+.v1.4.0.txt" />
   </ItemGroup>
 
 	<ItemGroup>
