--- a/TOHE.csproj
+++ b/TOHE.csproj
@@ -33,9 +33,9 @@
 
 	<ItemGroup>
 		<PackageReference Include="AmongUs.GameLibs.Steam" Version="2023.10.24" PrivateAssets="all" />
-		<PackageReference Include="BepInEx.IL2CPP.MSBuild" Version="2.0.1" />
+		<PackageReference Include="BepInEx.IL2CPP.MSBuild" Version="2.1.0-rc.1" />
 		<PackageReference Include="BepInEx.Unity.IL2CPP" Version="6.0.0-be.668" Private="false" ExcludeAssets="runtime;native" />
-		<PackageReference Include="Samboy063.Cpp2IL.Core" Version="2022.1.0-development.866" />
+		<PackageReference Include="Samboy063.Cpp2IL.Core" Version="2022.1.0-development.898" />
 	</ItemGroup>
 
   <ItemGroup>
