--- a/TOHE.csproj
+++ b/TOHE.csproj
@@ -35,7 +35,7 @@
 		<PackageReference Include="AmongUs.GameLibs.Steam" Version="2023.11.28" PrivateAssets="all" />
 		<PackageReference Include="BepInEx.IL2CPP.MSBuild" Version="2.1.0-rc.1" />
 		<PackageReference Include="BepInEx.Unity.IL2CPP" Version="6.0.0-be.682" Private="false" ExcludeAssets="runtime;native" />
-		<PackageReference Include="Samboy063.Cpp2IL.Core" Version="2022.1.0-development.898" />
+		<PackageReference Include="Samboy063.Cpp2IL.Core" Version="2022.1.0-pre-release.13" />
 	</ItemGroup>
 
   <ItemGroup>
