--- a/TOHE.csproj
+++ b/TOHE.csproj
@@ -7,7 +7,7 @@
     <Description>TOHE+</Description>
     <Authors>Gurge44</Authors>
     <langVersion>preview</langVersion>
-	  <AmongUs>E:\Program Files\AmongUs</AmongUs>
+	  <AmongUs>D:\Epic Games\AmongUs</AmongUs>
 	  <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 	  <Optimize>True</Optimize>
 	  <AssemblyName>$(MSBuildProjectName)+</AssemblyName>
@@ -50,6 +50,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
   </ItemGroup>
+	
   <Target Name="Copy" AfterTargets="Build" Condition="'$(AmongUs)' != ''">
     <Copy SourceFiles="$(OutputPath)$(AssemblyName).dll" DestinationFolder="$(AmongUs)/BepInEx/plugins/" Condition="'$(Configuration)' == 'Debug'" />
   </Target>
