--- a/TOHE.csproj
+++ b/TOHE.csproj
@@ -1,22 +1,21 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <GenerateAssemblyFileVersionAttribute>false</GenerateAssemblyFileVersionAttribute>
     <GenerateAssemblyInformationalVersionAttribute>false</GenerateAssemblyInformationalVersionAttribute>
-	  <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
+    <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
     <Description>TOHE+</Description>
     <Authors>Gurge44</Authors>
     <langVersion>preview</langVersion>
-	  <AmongUs>E:\Program Files\AmongUs</AmongUs>
-	  <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-	  <Optimize>True</Optimize>
-	  <AssemblyName>$(MSBuildProjectName)+</AssemblyName>
+    <AmongUs>E:\Program Files\AmongUs</AmongUs>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <Optimize>True</Optimize>
+    <AssemblyName>$(MSBuildProjectName)+</AssemblyName>
+    <GameExecutablePath>"C:\Path/to/Among Us.exe"</GameExecutablePath>
   </PropertyGroup>
-	
   <ItemGroup>
     <EmbeddedResource Include=".\Resources\**" />
   </ItemGroup>
-	
   <ItemGroup>
     <None Remove="Modules\zqihthf4.eqf~" />
     <None Remove="resources\modnews\english\TOHE+.v1.2.0.txt" />
@@ -25,20 +24,17 @@
     <None Remove="Roles\Crewmate\Doormaster.cs~RF5dd42bf0.TMP" />
     <None Remove="Roles\Neutral\scqzwl4z.0wp~" />
   </ItemGroup>
-	
   <ItemGroup>
     <EmbeddedResource Include="resources\modnews\english\TOHE+.v1.2.0.txt" />
     <EmbeddedResource Include="resources\modnews\english\TOHE+.v1.3.0.txt" />
     <EmbeddedResource Include="resources\modnews\english\TOHE+.v1.4.0.txt" />
   </ItemGroup>
-
-	<ItemGroup>
-		<PackageReference Include="AmongUs.GameLibs.Steam" Version="2023.11.28" PrivateAssets="all" />
-		<PackageReference Include="BepInEx.IL2CPP.MSBuild" Version="2.1.0-rc.1" />
-		<PackageReference Include="BepInEx.Unity.IL2CPP" Version="6.0.0-be.682" Private="false" ExcludeAssets="runtime;native" />
-		<PackageReference Include="Samboy063.Cpp2IL.Core" Version="2022.1.0-pre-release.13" />
-	</ItemGroup>
-
+  <ItemGroup>
+    <PackageReference Include="AmongUs.GameLibs.Steam" Version="2023.11.28" PrivateAssets="all" />
+    <PackageReference Include="BepInEx.IL2CPP.MSBuild" Version="2.1.0-rc.1" />
+    <PackageReference Include="BepInEx.Unity.IL2CPP" Version="6.0.0-be.682" Private="false" ExcludeAssets="runtime;native" />
+    <PackageReference Include="Samboy063.Cpp2IL.Core" Version="2022.1.0-pre-release.13" />
+  </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Costura.Fody" Version="5.8.0-alpha0098">
       <IncludeAssets>runtime; compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -52,5 +48,10 @@
   </ItemGroup>
   <Target Name="Copy" AfterTargets="Build" Condition="'$(AmongUs)' != ''">
     <Copy SourceFiles="$(OutputPath)$(AssemblyName).dll" DestinationFolder="$(AmongUs)/BepInEx/plugins/" Condition="'$(Configuration)' == 'Debug'" />
+    <Copy SourceFiles="$(OutputPath)$(AssemblyName).dll" DestinationFolder="$(AmongUs)/BepInEx/plugins/" Condition="'$(Configuration)' == 'Canary'" />
+    <Copy SourceFiles="$(OutputPath)$(AssemblyName).dll" DestinationFolder="$(AmongUs)/BepInEx/plugins/" Condition="'$(Configuration)' == 'Release'" />
+  </Target>
+  <Target Name="RunGameAfterBuild" AfterTargets="Build">
+    <Exec Command="$(GameExecutablePath)" />
   </Target>
 </Project>
