--- a/EHR.csproj
+++ b/EHR.csproj
@@ -15,12 +15,15 @@
 	
     <ItemGroup>
     <EmbeddedResource Include=".\Resources\**" />
+        <EmbeddedResource Remove="SUI\**"/>
     </ItemGroup>
 	
     <ItemGroup>
       <Compile Remove="CTA\**" />
       <EmbeddedResource Remove="CTA\**" />
       <None Remove="CTA\**" />
+        <Compile Remove="SUI\**"/>
+        <None Remove="SUI\**"/>
     </ItemGroup>
 
 	<ItemGroup>
