--- a/EHR.csproj
+++ b/EHR.csproj
@@ -9,7 +9,7 @@
         <langVersion>preview</langVersion>
         <AmongUs>E:\Program Files\AmongUs</AmongUs>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-        <Optimize>True</Optimize>
+        <!--        <Optimize>True</Optimize>-->
         <AssemblyName>$(MSBuildProjectName)</AssemblyName>
     </PropertyGroup>
 
