--- a/EHR.csproj
+++ b/EHR.csproj
@@ -7,9 +7,9 @@
         <Description>EHR</Description>
         <Authors>Gurge44</Authors>
         <langVersion>preview</langVersion>
-        <AmongUs>E:\Program Files\AmongUs</AmongUs>
+        <AmongUs>D:\Epic Games\AmongUs</AmongUs>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-        <!--        <Optimize>True</Optimize>-->
+        <Optimize>True</Optimize>
         <AssemblyName>$(MSBuildProjectName)</AssemblyName>
     </PropertyGroup>
 
