--- a/EHR.csproj
+++ b/EHR.csproj
@@ -7,7 +7,7 @@
         <Description>EHR</Description>
         <Authors>Gurge44</Authors>
         <langVersion>preview</langVersion>
-        <AmongUs>E:\Program Files\AmongUs</AmongUs>
+        <AmongUs>C:\Program Files (x86)\Steam\steamapps\common\Among Us</AmongUs>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <Optimize>True</Optimize>
         <AssemblyName>$(MSBuildProjectName)</AssemblyName>
