CTA App => EHR Control Panel

--- a/CTA/CustomTeamAssigner/CustomTeamAssigner.csproj
+++ b/CTA/CustomTeamAssigner/CustomTeamAssigner.csproj
@@ -13,8 +13,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="bg.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    <None Remove="bg.jpg" />
+    <Resource Include="bg.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
   </ItemGroup>
 
